// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,11 +9,11 @@
    </span>
    <div
      className="sc-1ln9y8s-4 bEGCGe"
    >
      <BasicTextAreaStyle
-       autoComplete="off"
+       autoComplete="on"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function anonymous]}
        required={false}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,11 @@
        maxRows={25}
        name="bar"
        onChange={[Function anonymous]}
        required={false}
        rows={5}
-       spellCheck={true}
+       spellCheck={false}
        value="baz"
      />
      <label
        className="sc-1ln9y8s-9 kZrAJF"
        htmlFor="bar"
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,11 +11,13 @@
      className="sc-1ln9y8s-4 bEGCGe"
    >
      <BasicTextAreaStyle
        autoComplete="off"
        id="bar"
+       maxLength="450"
        maxRows={25}
+       minLength="25"
        name="bar"
        onChange={[Function anonymous]}
        required={false}
        rows={5}
        spellCheck={true}
@@ -25,7 +27,10 @@
        className="sc-1ln9y8s-9 kZrAJF"
        htmlFor="bar"
      >
        qux
      </label>
+     <TextAreaCounterStyle>
+       3/450 common.max_characters
+     </TextAreaCounterStyle>
    </div>
  </div>
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -14,11 +14,11 @@
        autoComplete="off"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function anonymous]}
-       required={true}
+       required={false}
        rows={5}
        spellCheck={true}
        value="baz"
      />
      <label
`;
